V0.1.3
Refactorización de funciones para lograr separar responsabilidades,